--- a/invoice-form2.html
+++ b/invoice-form2.html
@@ -23,8 +23,8 @@
                 <h4>Dados do Cliente</h4>
                 <div class="row mb-3">
                     <div class="col-md-6">
-                        <label for="nome" class="form-label">Nome Completo</label>
-                        <input type="text" id="nome" class="form-control" required>
+                        <label for="nome" class="form-label">Nome:</label>
+                        <input type="text" id="nome" class="form-control" placeholder="Nome completo" required>
                     </div>
                     <div class="col-md-6">
                         <label for="email" class="form-label">Email</label>
